k8s/overlays/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rtrwnet-prod
  labels:
    app: rtrwnet
    env: production
