k8s/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rtrwnet-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  tls:
    - hosts:
        - fureup.my.id
        - app.fureup.my.id
        - admin.fureup.my.id
        - api.fureup.my.id
      secretName: rtrwnet-prod-tls
  rules:
    - host: fureup.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-homepage-service
                port:
                  number: 80
    - host: app.fureup.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-user-service
                port:
                  number: 80
    - host: admin.fureup.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-admin-service
                port:
                  number: 80
    - host: api.fureup.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8089
